--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Exo-javaScript</title>
+    <title>Nombre Vérificateur</title>
+    <script>
+        function verifierNombre() {
+            let nombre = prompt("Veuillez entrer un nombre:");
+            nombre = parseInt(nombre);
+
+            if (isNaN(nombre)) {
+                alert("Ce n'est pas un nombre valide.");
+            } else {
+                if (nombre > 20) {
+                    alert("Le nombre est trop grand.");
+                } else if (nombre < 20) {
+                    alert("Le nombre est trop petit.");
+                } else {
+                    alert("Le nombre est bon.");
+                }
+            }
+        }
+    </script>
 </head>
 <body>
-    <h1>Bienvenue sur la porte de JS</h1>
-
- <script src="exo.js"></script>
-
+    <h1>Vérificateur de Nombre</h1>
+    <button onclick="verifierNombre()">Vérifier un nombre</button>
 </body>
 </html>
